# lib3mf

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
Autogenerated/Bindings/C/: lib3mf.h
Autogenerated/Bindings/CDynamic/: lib3mf_dynamic.cc  lib3mf_dynamic.h
Autogenerated/Bindings/CSharp/: Lib3MF.cs
Autogenerated/Bindings/Cpp/: lib3mf_abi.hpp  lib3mf_implicit.hpp  lib3mf_types.hpp
Autogenerated/Bindings/CppDynamic/: lib3mf_abi.hpp  lib3mf_dynamic.h  lib3mf_dynamic.hpp
Autogenerated/Bindings/Go/: cfunc.go  lib3mf.go  lib3mf_dynamic.c  lib3mf_dynamic.h  lib3mf_types.h
Autogenerated/Bindings/NodeJS/: lib3mf_dynamic.cc  lib3mf_dynamic.h  lib3mf_nodeaddon.cc  lib3mf_nodewrapper.cc  lib3mf_nodewrapper.h  lib3mf_types.h
Autogenerated/Bindings/Pascal/: Unit_Lib3MF.pas
Autogenerated/Bindings/Python/: Lib3MF.py
Autogenerated/Source/: lib3mf_abi.hpp  lib3mf_interfaceexception.cpp  lib3mf_interfaceexception.hpp  lib3mf_interfacejournal.cpp  lib3mf_interfacejournal.hpp  lib3mf_interfaces.hpp  lib3mf_interfacewrapper.cpp  lib3mf_types.hpp
AutomaticComponentToolkit/: lib3mf.xml
CI/: integration_test.py
Include/: NMR_Spec_Version.h
Include/API/: lib3mf_model.hpp  lib3mf_object.hpp  lib3mf_reader.hpp  lib3mf_toolpathlayerdata.hpp  lib3mf_toolpathlayerreader.hpp  lib3mf_toolpathprofile.hpp  lib3mf_writer.hpp
Include/Common/: NMR_ErrorConst.h
Include/Common/ChunkedBinaryStream/: NMR_ChunkedBinaryStreamWriter.h
Include/Model/Classes/: NMR_Model.h  NMR_ModelConstants.h  NMR_ModelToolpathLayerReadData.h  NMR_ModelToolpathLayerWriteData.h  NMR_ModelToolpathProfile.h
Include/Model/Reader/: NMR_ModelReader.h  NMR_ModelReaderNode.h  NMR_ModelReaderNode_ModelBase.h
Include/Model/ToolpathReader/: NMR_ToolpathReaderNode_Hatch.h  NMR_ToolpathReaderNode_Override.h  NMR_ToolpathReaderNode_Point.h
Include/Model/Writer/: NMR_ModelWriter.h  NMR_ModelWriter_3MF.h
SDK/CPackExamples/Cpp/: GenerateVS2022.bat
SDK/CPackExamples/CppDynamic/: GenerateVS2022.bat
SDK/Examples/Cpp/: CMakeLists.txt
SDK/Examples/Python/: Lib3MF_Example.py  lib3mf_common.py
Source/: CMakeLists.txt
Source/API/: lib3mf.cpp  lib3mf_model.cpp  lib3mf_nodeiterator.cpp  lib3mf_object.cpp  lib3mf_reader.cpp  lib3mf_toolpathlayerdata.cpp  lib3mf_toolpathlayerreader.cpp  lib3mf_toolpathprofile.cpp  lib3mf_writer.cpp
Source/Common/: NMR_Exception.cpp  NMR_StringUtils.cpp
Source/Common/ChunkedBinaryStream/: NMR_ChunkedBinaryStreamWriter.cpp
Source/Model/Classes/: NMR_ImplicitNodeTypes.cpp  NMR_Model.cpp  NMR_ModelImplicitFunction.cpp  NMR_ModelLevelSetObject.cpp  NMR_ModelToolpathLayerReadData.cpp  NMR_ModelToolpathLayerWriteData.cpp  NMR_ModelToolpathProfile.cpp
Source/Model/Reader/: NMR_ModelReader.cpp  NMR_ModelReaderNode_ModelBase.cpp  NMR_ModelReader_3MF.cpp
Source/Model/ToolpathReader/: NMR_ToolpathReaderNode_Hatch.cpp  (+3 more)
Tests/CPP_Bindings/: CMakeLists.txt
Tests/CPP_Bindings/Source/: BeamLattice.cpp  UnitTest_EncryptionUtils.cpp  Volumetric.cpp  Wrapper.cpp  ZipBuffer.cpp  ZipBuffer.h
cmake/: GenerateVS2022_32bit.bat  lib3mfConfig.cmake
(+22 files in other folders)
